--- a/.markdown_link_check_config.json
+++ b/.markdown_link_check_config.json
@@ -1,4 +1,10 @@
 {
+  "replacementPatterns": [
+    {
+      "pattern": "^/",
+      "replacement": "{{BASEURL}}/"
+    }
+  ],
   "retryOn429": true,
   "timeout": "30s",
   "aliveStatusCodes": [200, 403]
